본인이 했던 게임 목록 조회시 가장 최근에 했던 게임 순으로 조회